Fixed Day Labels spacing

--- a/components/StudentActivityChart.module.css
+++ b/components/StudentActivityChart.module.css
@@ -43,7 +43,7 @@
   display: flex;
   flex-direction: column;
   margin-right: 5px;
-  margin-top: 25px;
+  margin-top: 45px;
   font-size: 10px;
   color: #f5f6f7;
   flex-shrink: 0;
